# zero2prod_practice

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  fly.toml  sqlx-data.json
.github/workflows/: fly.yml
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
