[package]
name = "zero2prod_practice"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod_practice"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
